<resources>
    <string name="app_name">IndoorPositioning</string>
    <string name="plotdata">Select Plot Options</string>
    <string name="plotsensor">Sensor Measurements</string>
    <string name="pltpdr">PDR Trajectory</string>
    <string name="back">Go Back</string>
    <string name="selectsensortext">Choose a number from 0 to 9 corresponding to the
    desired sensor data: (0: mag_x, 1: mag_y, 2: mag_z, 3: mag_h, 4: acc_x, 5: acc_y,
        6: acc_z, 7: gyro_x, 8: gyro_y, 9: gyro_z)</string>
    <string name="insertnumber">Insert number:</string>
    <string name="input_height">Insert height in cm:</string>
    <string name="inputsextext">Choose a number between 0 and 1 corresponding to your sex:
        (0:female, 1: male)</string>
    <string name="plot">Plot</string>
    <string name="align">Align</string>
    <string name="aligntext">Align trajectory to world coordinates with desired sensor values:</string>
    <string name="askforsensor">Do you wish the sensor values to be overlaid as well?
        (0: no, 1: yes):</string>
    <string name="map">Map</string>
    <string name="transparency">Transparency</string>
    <string name="opt_for_user_info">Before that,\n\n To increase the accuracy of this app, we would like to know you gender and your height. We promise we will keep it a secret.\n\n
        It\'s okay if you don\'t want to tell us tho. You can still enjoy the app!</string>
    <string name="gender">Your gender?</string>
    <string name="height">Your height? (Put 0 if you don\'t want to provide the info)</string>
    <string name="height_hint">in meters</string>
    <string name="open_map">Start exploring!</string>
    <string name="track">Tracking</string>
    <string-array name="genderOption">
        <item>Prefer not to say</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="alignoptions">Align Trajectory Options</string>
    <string name="alignoptionstext1">There are two options to align the trajectory! \n\n
    1) Align using world coordinates. This options requires inputting the coordinates of the starting position.
    The coordinates can be found using the WiFi positioning option in our app. Otherwise, insert a number from 0 to 9
    corresponding to the coordinates of all the corridors from the desired path: 0 corresponds to the entrance of
    Sanderson and 9 to the entrance of the computing lab!</string>
    <string name="alignoptionstext2">2) Automatic alignment of trajectory based on the path geometry and magnetic field
    strength sensor measurements.</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBSQGJyNTOqaCtJ_w_mOqUJdIhS_5P3HAE</string>
    <string name="autoalign">Automatic Alignment</string>
    <string name="start">Start</string>
    <string name="heightread">Height</string>
    <string name="sexread">Sex</string>
    <string name="automaticalignment">Automatic Alignment</string>
    <string name="automaticalignmenttext">Do you want the complete trajectory aligned or each line separately?
     (0: No, 1: Yes).</string>


</resources>