<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/height_tv"
        android:layout_width="268dp"
        android:layout_height="63dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/inputsextext"
        android:text="@string/inputsextext"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.302"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/plotsensor"
        android:text="@string/plotsensor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/plot_sensor_image2"
        android:layout_width="312dp"
        android:layout_height="281dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="76dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insert_num3"
        app:srcCompat="@drawable/ic_launcher_background" />

    <EditText
        android:id="@+id/insert_num2"
        android:layout_width="212dp"
        android:layout_height="59dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="150dp"
        android:ems="10"
        android:hint="@string/insertnumber"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height_tv" />

    <EditText
        android:id="@+id/insert_num3"
        android:layout_width="212dp"
        android:layout_height="59dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/input_height"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insert_num2" />

    <Button
        android:id="@+id/plot_btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="76dp"
        android:hint="@string/plot"
        android:text="@string/plot"
        app:layout_constraintBottom_toTopOf="@+id/plot_sensor_image2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/insert_num3" />
</androidx.constraintlayout.widget.ConstraintLayout>